<resources>
    <string name="app_name">Mi Menu Ideal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_txt">Iniciar Sesión</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Ingresar</string>
    <string name="login_regHere_txt">Registrar aquí</string>
    <string name="register_txt">Registo de usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_ident">Número de identificación</string>
    <string name="register_btn">Registrar</string>
    <string name="category_txt">Seleccione categoria</string>
    
    //para un arreglo

    <string-array name="categorias">
        <item>Comidas Rápidas</item>
        <item>Bebidas</item>
        <item>Heladería</item>
        <item>Varios</item>
    </string-array>

    <string-array name="categorias_completo">
        <item>Comidas Rápidas,6000,http://www.publitell.com/system/fotos/43567/perros-calientes.jpg</item>
        <item>Bebidas,3000,http://static.imujer.com/sites/default/files/elgrancatador/las-3%20bebidas-alcoholicas-que-dejan-menos-resaca-3.jpg</item>
        <item>Heladería,5000,http://www.recetin.com/wp-content/uploads/2013/07/helado_fresa1.jpg</item>
        <item>Varios,1000,http://orsimages.unileversolutions.com/ORS_Images/Knorr_es-CO/Empanadas_de_carne_28_1.3.6_326X580.Jpeg</item>
    </string-array>
    <string name="title_activity_fast_food">FastFoodActivity</string>
    <string name="txt_dog">Perro Caliente</string>
    <string name="txt_burger">Hamburguesa</string>
    <string name="txt_san">Sandwich</string>
    <string name="title_activity_drinks">DrinksActivity</string>
    <string name="txt_jugo">Jugos</string>
    <string name="txt_gas">Gaseosas</string>
    <string name="txt_gran">Granizados</string>
    <string name="txt_mal">Malteadas</string>
    <string name="txt_cafe">Cafeteria</string>
    <string name="title_activity_ice_cream">IceCreamActivity</string>
    <string name="txt_frutas">Ensalada de Frutas</string>
    <string name="txt_split">Banana Split</string>
    <string name="txt_fresas">Fresas con Helado</string>
    <string name="title_activity_others">OthersActivity</string>
    <string name="txt_pan">Panaderia</string>
    <string name="txt_tipi">Típicos</string>

</resources>
