<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="com.example.alexandraw.mimenuideal.DrinksActivity">

    <Button
        android:id="@+id/btn_jugo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_jugo"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:onClick="jugo"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_gas"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:text="@string/txt_gas"
        android:onClick="gaseosa"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_jugo"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_gran"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:text="@string/txt_gran"
        android:layout_centerHorizontal="true"
        android:onClick="granizado"
        android:layout_below="@+id/btn_gas"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_mal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_mal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="malteada"
        android:layout_below="@+id/btn_gran"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

</RelativeLayout>
