<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="com.example.alexandraw.mimenuideal.IceCreamActivity">

    <Button
        android:id="@+id/btn_frutas"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:text="@string/txt_frutas"
        android:onClick="frutas"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_split"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:text="@string/txt_split"
        android:layout_centerHorizontal="true"
        android:onClick="split"
        android:layout_below="@+id/btn_frutas"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_copa"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mgn_btn"
        android:text="Copa de Helado"
        android:layout_centerHorizontal="true"
        android:onClick="copa"
        android:layout_below="@+id/btn_split"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/btn_fresas"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_fresas"
        android:layout_centerHorizontal="true"
        android:onClick="fresas"
        android:layout_below="@+id/btn_copa"
        android:background="#81433d"
        android:textColor="#ffffff"
        />

</RelativeLayout>
